tests/paczka1/small_fuzzy/90483888.err
Error in line 12: BznoxbUCgIG S585 87,6
